--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ public/assets/css/main.raw.css
 public/assets/css/main.raw.css.map
 .DS_Store
 *.log
+.clinerules/byterover-rules.md
+.kilocode/rules/byterover-rules.md
+.roo/rules/byterover-rules.md
+.windsurf/rules/byterover-rules.md
+.cursor/rules/byterover-rules.mdc
+.kiro/steering/byterover-rules.md
+.qoder/rules/byterover-rules.md
+.augment/rules/byterover-rules.md
